--- a/src/app/home/b2b-flows-manage/node-properties/connector-properties/connector-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/connector-properties/connector-properties.component.html
@@ -25,7 +25,7 @@
 </ng-container>
 <div *ngIf="!selectedConnector" class="data-format-selector-wrapper">
     <div>
-        <odp-search-box open="true" (enteredText)="searchConnector($event)" (reset)="clearSearch()"></odp-search-box>
+        <odp-search-box open="true" (enteredText)="searchConnector($event)" (reset)="clearSearch()" (keydown.delete)="$event.stopPropagation();"></odp-search-box>
     </div>
     <div class="list-group my-3">
         <div class="list-group-item list-group-item-action d-flex align-items-center justify-content-between hover"
