--- a/src/app/home/b2b-flows-manage/node-properties/function-selector/function-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/function-selector/function-selector.component.html
@@ -8,7 +8,7 @@
 </div>
 <div class="data-format-selector-wrapper">
     <div>
-        <odp-search-box open="true" (enteredText)="searchFunction($event)" (reset)="clearSearch()"></odp-search-box>
+        <odp-search-box open="true" (enteredText)="searchFunction($event)" (reset)="clearSearch()" (keydown.delete)="$event.stopPropagation();"></odp-search-box>
     </div>
     <div class="list-group my-3">
         <div class="list-group-item list-group-item-action d-flex align-items-center justify-content-between hover"
