--- a/src/app/utils/data-structure-selector/data-format-selector/data-format-selector.component.html
+++ b/src/app/utils/data-structure-selector/data-format-selector/data-format-selector.component.html
@@ -8,7 +8,7 @@
 </div>
 <div class="data-format-selector-wrapper">
     <div>
-        <odp-search-box open="true" (enteredText)="searchFormat($event)" (reset)="clearSearch()"></odp-search-box>
+        <odp-search-box open="true" (enteredText)="searchFormat($event)" (reset)="clearSearch()" (keydown.delete)="$event.stopPropagation();"></odp-search-box>
     </div>
     <div class="mt-2">
         <span class="font-12 text-muted">Last 10 Created/Updated formats are listed, Search for more.</span>
