--- a/src/app/home/b2b-flows-manage/node-properties/input-data-selector/input-data-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/input-data-selector/input-data-selector.component.html
@@ -50,8 +50,8 @@
                 <span class="dsi dsi-minus-circle text-danger hover ml-3" (click)="data=null"></span>
             </span>
             <div *ngIf="!userSelectedValue" class="list-group my-3">
-                <ng-container *ngFor="let item of nodeList">
-                    <div class="list-group-item list-group-item-action d-flex align-items-center justify-content-between hover"
+                <ng-container *ngFor="let item of nodeList; let i=index">
+                    <div *ngIf="i!=nodeList.length-1" class="list-group-item list-group-item-action d-flex align-items-center justify-content-between hover"
                         (click)="selectNodeBody(item,'body')">
                         <div class="d-flex align-items-center justify-content-start">
                             <odp-round-radio [edit]="edit" [checked]="item._selected">
