--- a/src/app/utils/styled-text/styled-text.component.html
+++ b/src/app/utils/styled-text/styled-text.component.html
@@ -1,14 +1,18 @@
-<div>
+<div id="parent">
   <div class="input-container">
     <input #styledInputText [value]="value" (input)="onChange($event)" [ngbTypeahead]="ngbTypeahead"
       (scroll)="handleScroll($event)" [resultFormatter]="resultFormatter" [inputFormatter]="inputFormatter"
       (selectItem)="selectItem($event)" [disabled]="disabled" (paste)="onPaste.emit($event)"
-      (keyup.enter)="onEnter.emit($event)" [pattern]="pattern.source" [placeholder]="placeholder">
+      (keyup.enter)="onEnter.emit($event)" [pattern]="pattern.source" [placeholder]="placeholder"
+      (keydown.delete)="$event.stopPropagation();" *ngIf="!useEditableDiv">
 
-    <div class="input-renderer" #renderer>
-      <div *ngFor="let word of valueArray">
-        <span [ngClass]="{'text-primary': regexMatch(word)}">{{word}}</span>
-      </div>
+    <div class="check" #styledDivText (dataChange)="onChange($event)" (scroll)="handleScroll($event)" odpEditor
+      [(data)]="value" *ngIf="useEditableDiv" [style]="divStyle" [insertText]="insertText">
+    </div>
+
+
+    <div class="input-renderer" #renderer [style]="rendererStyle">
+      <span *ngFor="let word of valueArray" [ngClass]="{'text-primary': regexMatch(word)}">{{word}}</span>
     </div>
   </div>
 
