--- a/src/app/utils/styled-text/styled-text.component.scss
+++ b/src/app/utils/styled-text/styled-text.component.scss
@@ -28,24 +28,39 @@
     background: transparent;
 }
 
+.input-container .check {
+    width: 240px;
+    height: 250px;
+    background: transparent;
+    z-index: 1;
+    margin: 0 0 0 0.5rem;
+    outline: 0px solid transparent;
+}
+
 /* For showing through placeholder */
 .input-container input:not(:placeholder-shown) {
     -webkit-text-fill-color: transparent !important;
     letter-spacing: 0.15px;
 }
 
+.input-container .check:not(:placeholder-shown) {
+    -webkit-text-fill-color: transparent !important;
+    letter-spacing: 0.15px;
+}
+
 .input-container .input-renderer {
     position: absolute;
-    inset: 0;
-    display: flex;
+    top: 0px;
+    left: 0px;
     align-items: center;
-    margin: 0 0.5rem;
+    margin: 0 0 0 0.5rem;
     /* This line preserves trailing
         whitespaces */
     white-space: pre;
     overflow-x: auto;
     -webkit-user-select: none;
     user-select: none;
+    z-index: -1;
 }
 
 .input-container .input-renderer::-webkit-scrollbar {
@@ -54,4 +69,12 @@
 
 .ml2 {
     margin-left: 2px;
+}
+
+
+.input-height {
+    min-height: calc(100vh - 352px);
+    max-height: calc(100vh - 352px);
+    word-break: break-all;
+    // font-family: 'Courier New', Courier, monospace;
 }
