--- a/src/app/utils/styled-text/styled-text.component.scss
+++ b/src/app/utils/styled-text/styled-text.component.scss
@@ -1,3 +1,6 @@
+@import "src/assets/scss/bootstrap/_functions.scss";
+@import "src/assets/scss/bootstrap/_variables.scss";
+
 // .value-holder {
 //     width: 260px;
 //     border: 0px;
@@ -77,4 +80,23 @@
     max-height: calc(100vh - 352px);
     word-break: break-all;
     // font-family: 'Courier New', Courier, monospace;
+}
+
+.suggestions {
+    border: 1px solid grey;
+    border-radius: 4px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+}
+
+.option {
+    height: 32px;
+    border-bottom: 1px solid grey;
+    padding: 0.4rem;
+
+    &:hover {
+        background-color: $gray-200;
+    }
 }
