--- a/src/app/utils/styled-text/styled-text.component.html
+++ b/src/app/utils/styled-text/styled-text.component.html
@@ -6,8 +6,17 @@
       (keyup.enter)="onEnter.emit($event)" [pattern]="pattern.source" [placeholder]="placeholder"
       (keydown.delete)="$event.stopPropagation();" *ngIf="!useEditableDiv">
 
-    <div class="check" #styledDivText (dataChange)="onChange($event)" (scroll)="handleScroll($event)" odpEditor
-      [(data)]="value" *ngIf="useEditableDiv" [style]="divStyle" [insertText]="insertText">
+    <div>
+      <div class="check" #styledDivText (dataChange)="onChange($event, true)" (changeEvent)="onChangeEvent($event)"
+        (scroll)="handleScroll($event)" odpEditor [(data)]="value" *ngIf="useEditableDiv" [style]="divStyle"
+        [insertText]="insertText">
+      </div>
+      <div class="suggestions" *ngIf="list.length > 0 && this.searchTerm" [style]="someStyle">
+        <div *ngFor="let option of list" class="d-flex flex-column">
+          <span class="hover option" (click)="selectOption(option)">{{option.label}}</span>
+        </div>
+
+      </div>
     </div>
 
 
