DS-396 is fixed
@jugnu-appveen

--- a/src/app/home/b2b-flows-manage/node-properties/add-headers/add-headers.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/add-headers/add-headers.component.html
@@ -48,8 +48,8 @@
                         placeholder="Header Value"></odp-styled-text>
                     <!-- <input type="text" class="border-0 px-2 h-100 w-100" [(ngModel)]="item.value"
                         placeholder="Header Value" (keyup.enter)="addHeader(i)"> -->
-                    <input type="text" class="border-0 px-2 h-100 w-100" [(ngModel)]="item.value"
-                        placeholder="Header Value" (keyup.enter)="addHeader(i)" (keydown.delete)="$event.stopPropagation();">
+                    <!-- <input type="text" class="border-0 px-2 h-100 w-100" [(ngModel)]="item.value"
+                        placeholder="Header Value" (keyup.enter)="addHeader(i)" (keydown.delete)="$event.stopPropagation();"> -->
                 </div>
                 <div class="header-action position-relative border-left d-flex align-items-center">
                     <span class="icon d-flex align-items-center justify-content-center dsi dsi-minus-circle hover"
