--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/node-mapping.component.html
@@ -96,7 +96,11 @@
                                 <span class="node-icon font-16 fw-400 dsi dsi-file write mr-2"></span>
                                 <span class="font-13 fw-400 text-secondary">File Writer</span>
                             </div>
-                            
+                            <div *ngIf="node.type=='MARKETPLACE'"
+                                class="node-item border-bottom pb-2 mb-2 d-flex align-items-center hover">
+                                <span class="node-icon font-16 fw-400 dsi dsi-library mr-2"></span>
+                                <span class="font-13 fw-400 text-secondary">Marketplace</span>
+                            </div>
                         </div>
                         <div class="font-14 fw-500 mb-2">{{node.name}}</div>
                         <odp-source-selector [nodeList]="nodeList" [index]="i"></odp-source-selector>
