--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -73,46 +73,6 @@
           <span class="app-version">v{{ version }}</span>
         </div>
       </div>
-      <!-- <div [@userProfile] class="profile position-absolute bg-white border border-border" *ngIf="showProfileOptions"
-        odpClickOutside [ignore]="['.profile-icon', '.fa-user']" (outside)="showProfileOptions = false">
-        <div class="profile-container position-relative d-flex align-items-center h-100 w-100">
-          <div
-            class="user-icon d-flex align-items-center justify-content-center position-absolute rounded-circle bg-light border border-border">
-            <span class="far fa-user fa-lg text-secondary"></span>
-          </div>
-          <div
-            class="profile-thumbnail d-flex align-items-center justify-content-center rounded-circle bg-light border border-border mx-4">
-            <span class="far fa-user fa-2x text-secondary"></span>
-          </div>
-          <div class="profile-data d-flex flex-column">
-            <h4 class="profile-data-name font-weight-bold">{{ name }}</h4>
-            <div class="profile-data-more d-flex align-items-center">
-              <div class="text-secondary profile-data-more-item pr-3 username-holder text-truncate">
-                {{ username }}
-              </div>
-              <div class="profile-data-more-item px-1" *ngIf="authType && authType === 'local'">
-                <button type="button" class="btn btn-link btn-sm" (click)="toggleChangePassword = true">
-                  Change Password
-                </button>
-              </div>
-              <div class="profile-data-more-item px-1">
-                <button type="button" class="btn btn-link btn-sm" (click)="logout()" id="logout">
-                  Logout
-                </button>
-              </div>
-            </div>
-          </div>
-          <small class="position-absolute text-border app-version">v{{ version }}</small>
-          <small class="last-login text-muted">Last Login:
-            {{
-            lastLogin | dateFormat: 'DD-MMM-YYYY, hh:mm:ss A, z':'Etc/Zulu'
-            }}</small>
-        </div>
-      </div> -->
-      <!-- <div class="menu hover rounded-circle bg-light border border-border d-flex align-items-center justify-content-center"
-        ngbTooltip="Switch App" placement="bottom" (click)="showAppOptions=!showAppOptions">
-        <odp-app-switcher-icon color="aaa" size="28"></odp-app-switcher-icon>
-      </div> -->
     </div>
   </div>
   <div class="d-flex align-items-center px-4 fw-600 font-22 py-3">
@@ -127,6 +87,9 @@
     </span>
     <span class="d-flex align-items-center px-4 fw-400 item hover" *ngIf="isSuperAdmin">
       <span routerLinkActive="active" routerLink="metadata/mapper" class="text">Mapper Formulas</span>
+    </span>
+    <span class="d-flex align-items-center px-4 fw-400 item hover" *ngIf="isSuperAdmin">
+      <span routerLinkActive="active" routerLink="metadata/node" class="text">Custom Nodes</span>
     </span>
   </div>
   <!-- <div #agentActive="routerLinkActive" class="d-flex align-items-center px-3 item hover" routerLinkActive="active"
