--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -95,7 +95,7 @@
               }">Connectors</span>
             </div>
           </div>
-          <div *ngIf="hasFlowsPermission" #processNodeRoute="routerLinkActive"
+          <!-- <div *ngIf="hasFlowsPermission" #processNodeRoute="routerLinkActive"
             class="icon-block d-flex align-items-center my-3"
             [ngClass]="{'justify-content-between':showSideNav, 'justify-content-center':!showSideNav}"
             routerLinkActive="text-primary bg-white active" [routerLink]="['process-node']" id="processNodeManager">
@@ -106,7 +106,7 @@
                   'nav-inactive': !processNodeRoute.isActive
                 }">Process Nodes</span>
             </div>
-          </div>
+          </div> -->
           <div *ngIf="hasFlowsPermission" #flowRoute="routerLinkActive"
             class="icon-block d-flex align-items-center my-3"
             [ngClass]="{'justify-content-between':showSideNav, 'justify-content-center':!showSideNav}"
